# bevy_jam_3

./: .gitignore  Cargo.toml  README.md
assets/levels/ldtk/: levels.ldtk
src/: animation.rs  camera.rs  debug.rs  enemy.rs  level.rs  main.rs  player.rs  sprite_sheet_animation.rs  unit.rs
src/app_state/: game.rs  loading.rs  main_menu.rs  mod.rs  opening_cutscene.rs
src/behaviour/: approach_and_keep_distance.rs  dash.rs  mod.rs  separation.rs
src/behaviour/states/: approach_and_keep_distance.rs  attack.rs  fire_projectile.rs  idle.rs  mod.rs  wander.rs
src/behaviour/triggers/: mod.rs
src/creature_state/: mod.rs
src/enemies/: enemy_entity_plugins.rs  mod.rs  skuller.rs
src/entity/: adept.rs  creature.rs  goblin.rs  lab_boss.rs  level_exit.rs  level_start.rs  mod.rs  mutant.rs  player.rs  skuller.rs  slimer.rs  sorcerian.rs  spawner.rs
src/game/: endgame_cutscene.rs  level_manager.rs  mod.rs  mutation_manager.rs  mutation_selection.rs  opening_cutscene.rs  ui.rs
