[package]
name = "bevy_jam_3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy_rapier2d = "0.21.0"
bevy_prototype_lyon = "0.8.0"
bevy-inspector-egui = "0.18.1"
bevy_prototype_debug_lines = "0.10"
bevy_pixel_camera = "0.4"
rand = "*"