[package]
name = "bevy_jam_3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy_rapier2d = "0.21.0"
bevy_prototype_lyon = "0.8.0"
bevy-inspector-egui = "0.18.1"
bevy_prototype_debug_lines = "0.10"
bevy_asset_loader = "0.16"
bevy_ecs_ldtk = { version = "0.6", features = ["atlas"] }
bevy_mod_ui_texture_atlas_image = "0.4.1"
leafwing-input-manager = "0.9.1"
seldom_state = { version = "0.5", features = ["leafwing_input"]}
rand = "*"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1